<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ticker.views.com.ticker.widgets.circular.timer.view.CircularView
        android:id="@+id/circular_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:visibility="invisible"
        app:m_circle_radius="100"
        app:m_cicle_stroke_width="18"
        app:m_arc_stroke_color="@android:color/white"
        app:m_circle_stroke_color="@color/colorCyan" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="128dp"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/np_minute"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/minute"
            android:layout_gravity="center"/>

        <NumberPicker
            android:id="@+id/np_second"
            android:layout_toRightOf="@id/np_minute"
            android:focusable="false"
            android:clickable="false"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/second"
            android:layout_gravity="center"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_destroy"
        android:text="@string/destroy"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_circle_button"
        android:layout_below="@id/circular_view"/>

    <Button
        android:id="@+id/btn_start"
        android:text="@string/start"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreenLight"
        android:background="@drawable/greendark_circle_button"
        android:layout_below="@id/circular_view"
        android:layout_alignParentRight="true"/>

</RelativeLayout>